JS事件高级应用

--- a/JS事件中级/拖拽2.html
+++ b/JS事件中级/拖拽2.html
@@ -36,11 +36,12 @@
                 {
                     document.onmousemove=null;
                     oDiv.onmouseup=null;
-                }
                 };
 
-            
-        }
+                return false;
+                
+        };   
+    }
     </script>
 </head>
 <body>
