--- a/JavaScript系列视频资料/智能社视频材料 - JS事件高级应用/记录/onload.html
+++ b/JavaScript系列视频资料/智能社视频材料 - JS事件高级应用/记录/onload.html
@@ -6,17 +6,16 @@
 <script>
 window.onload=function ()
 {
-	var oTxt=document.getElementById('txt1');
-	
-	oTxt.onkeydown=function ()
-	{
-		return false;
-	};
+	alert('a');
+};
+
+window.onload=function ()
+{
+	alert('b');
 };
 </script>
 </head>
 
 <body>
-<input type="text" id="txt1" />
 </body>
 </html>
