--- a/JavaScript系列视频资料/智能社视频材料 - JS事件高级应用/记录/拖拽——吸附.html
+++ b/JavaScript系列视频资料/智能社视频材料 - JS事件高级应用/记录/拖拽——吸附.html
@@ -4,12 +4,14 @@
 <meta charset="utf-8">
 <title>无标题文档</title>
 <style>
-#div1 {width:200px; height:200px; background:red; position:absolute;}
+#div1 {width:100px; height:100px; background:red; position:absolute;}
+#div2 {width:700px; height:500px; background:#CCC; position:relative;}
 </style>
 <script>
 window.onload=function ()
 {
 	var oDiv=document.getElementById('div1');
+	var oDiv2=document.getElementById('div2');
 	
 	var disX=0;
 	var disY=0;
@@ -27,22 +29,22 @@ window.onload=function ()
 			var l=oEvent.clientX-disX;
 			var t=oEvent.clientY-disY;
 			
-			if(l<0)
+			if(l<50)
 			{
 				l=0;
 			}
-			else if(l>document.documentElement.clientWidth-oDiv.offsetWidth)
+			else if(l>oDiv2.offsetWidth-oDiv.offsetWidth)
 			{
-				l=document.documentElement.clientWidth-oDiv.offsetWidth;
+				l=oDiv2.offsetWidth-oDiv.offsetWidth;
 			}
 			
-			if(t<0)
+			if(t<50)
 			{
 				t=0;
 			}
-			else if(t>document.documentElement.clientHeight-oDiv.offsetHeight)
+			else if(t>oDiv2.offsetHeight-oDiv.offsetHeight)
 			{
-				t=document.documentElement.clientHeight-oDiv.offsetHeight;
+				t=oDiv2.offsetHeight-oDiv.offsetHeight;
 			}
 			
 			oDiv.style.left=l+'px';
@@ -62,6 +64,8 @@ window.onload=function ()
 </head>
 
 <body>
-<div id="div1"></div>
+<div id="div2">
+	<div id="div1"></div>
+</div>
 </body>
 </html>
