--- a/JavaScript系列视频资料/智能社视频材料 - JS事件高级应用/记录/拖拽.html
+++ b/JavaScript系列视频资料/智能社视频材料 - JS事件高级应用/记录/拖拽.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>无标题文档</title>
 <style>
-#div1 {width:200px; height:200px; background:red; position:absolute;}
+#div1 {width:100px; height:100px; background:red; position:absolute;}
 </style>
 <script>
 window.onload=function ()
@@ -24,9 +24,11 @@ window.onload=function ()
 		document.onmousemove=function (ev)
 		{
 			var oEvent=ev||event;
+			var l=oEvent.clientX-disX;
+			var t=oEvent.clientY-disY;
 			
-			oDiv.style.left=oEvent.clientX-disX+'px';
-			oDiv.style.top=oEvent.clientY-disY+'px';
+			oDiv.style.left=l+'px';
+			oDiv.style.top=t+'px';
 		};
 		
 		document.onmouseup=function ()
@@ -34,12 +36,19 @@ window.onload=function ()
 			document.onmousemove=null;
 			document.onmouseup=null;
 		};
+		
+		return false;	//chrome、ff、IE9
 	};
 };
 </script>
 </head>
 
 <body>
-<div id="div1"></div>
+asdfasdfsdf<br>
+dfasfasdfasd
+<div id="div1">asdfasdfsdf<br>
+dfasfasdfasd</div>
+asdfasdfsdf<br>
+dfasfasdfasd
 </body>
 </html>
