--- a/JavaScript系列视频资料/智能社视频材料 - JS事件高级应用/记录/自定义滚动条.html
+++ b/JavaScript系列视频资料/智能社视频材料 - JS事件高级应用/记录/自定义滚动条.html
@@ -4,29 +4,38 @@
 <meta charset="utf-8">
 <title>无标题文档</title>
 <style>
-#div1 {width:200px; height:200px; background:red; position:absolute;}
+#parent {width:600px; height:20px; background:#CCC; position:relative; margin:10px auto;}
+#div1 {width:20px; height:20px; background:red; position:absolute; left:0; top:0;}
 </style>
 <script>
 window.onload=function ()
 {
 	var oDiv=document.getElementById('div1');
+	var oParent=document.getElementById('parent');
 	
 	var disX=0;
-	var disY=0;
 	
 	oDiv.onmousedown=function (ev)
 	{
 		var oEvent=ev||event;
 		
 		disX=oEvent.clientX-oDiv.offsetLeft;
-		disY=oEvent.clientY-oDiv.offsetTop;
-		
+				
 		document.onmousemove=function (ev)
 		{
 			var oEvent=ev||event;
+			var l=oEvent.clientX-disX;
 			
-			oDiv.style.left=oEvent.clientX-disX+'px';
-			oDiv.style.top=oEvent.clientY-disY+'px';
+			if(l<0)
+			{
+				l=0;
+			}
+			else if(l>oParent.offsetWidth-oDiv.offsetWidth)
+			{
+				l=oParent.offsetWidth-oDiv.offsetWidth;
+			}
+			
+			oDiv.style.left=l+'px';
 		};
 		
 		document.onmouseup=function ()
@@ -34,12 +43,16 @@ window.onload=function ()
 			document.onmousemove=null;
 			document.onmouseup=null;
 		};
+		
+		return false;	//chrome、ff、IE9
 	};
 };
 </script>
 </head>
 
 <body>
-<div id="div1"></div>
+<div id="parent">
+	<div id="div1"></div>
+</div>
 </body>
 </html>
