--- a/JavaScript系列视频资料/智能社视频材料 - Ajax基础/记录/aaa.html
+++ b/JavaScript系列视频资料/智能社视频材料 - Ajax基础/记录/aaa.html
@@ -3,19 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>无标题文档</title>
-<script>
-window.onload=function ()
-{
-	alert('a');
-};
-
-window.onload=function ()
-{
-	alert('b');
-};
-</script>
 </head>
 
 <body>
+aaa
+<input type="button" value="aaa" />
 </body>
 </html>
